Fix float overlap
Avoid explicitly setting some heights, add clear float

--- a/web/skins/classic/css/flat/views/control.css
+++ b/web/skins/classic/css/flat/views/control.css
@@ -4,6 +4,14 @@
     width: 500px;
 }
 
+.ptzControls::after {
+  visibility: hidden;
+  display: block;
+  content: "";
+  clear: both;
+  height: 0;
+}
+
 .ptzControls input.ptzTextBtn {
     margin-top: 2px;
 }
@@ -18,7 +26,6 @@
 
 .ptzControls .controlsPanel .arrowControl {
     width: 40px;
-    height: 180px;
     margin: 0 4px;
 }
 
